force-app/main/default/objects/Materiel_affecte__c/Materiel_affecte__c.object-meta.xml
<CustomObject>
    <description>Matériels affectés aux techniciens</description>
    <label>Matériel &amp; EPI affecté</label>
    <nameField>
        <label>Nom de Materiel affecté</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matériels &amp; EPI affectés</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>