force-app/main/default/objects/Materiel_affecte__c/fields/Commentaire_sortie__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_sortie__c</fullName>
    <label>Commentaire sortie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>