force-app/main/default/objects/Materiel_affecte__c/fields/Commentaires_pr_t_externe__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_pr_t_externe__c</fullName>
    <label>Commentaires prêt externe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>