force-app/main/default/objects/Materiel_affecte__c/fields/Date_achat__c.field-meta.xml
<CustomField>
    <fullName>Date_achat__c</fullName>
    <label>Date d&apos;achat</label>
    <type>Date</type>
</CustomField>