force-app/main/default/objects/Materiel_affecte__c/fields/Date_d_attribution__c.field-meta.xml
<CustomField>
    <fullName>Date_d_attribution__c</fullName>
    <label>Date d&apos;attribution</label>
    <required>true</required>
    <type>Date</type>
</CustomField>