force-app/main/default/objects/Materiel_affecte__c/fields/Date_de_fabrication__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fabrication__c</fullName>
    <label>Date de fabrication</label>
    <type>Date</type>
</CustomField>