force-app/main/default/objects/Materiel_affecte__c/fields/Date_de_fin_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_contrat__c</fullName>
    <label>Date de fin de contrat</label>
    <type>Date</type>
</CustomField>