force-app/main/default/objects/Materiel_affecte__c/fields/Date_de_sortie__c.field-meta.xml
<CustomField>
    <fullName>Date_de_sortie__c</fullName>
    <label>Date de sortie</label>
    <type>Date</type>
</CustomField>