force-app/main/default/objects/Materiel_affecte__c/fields/Date_dernier_controle__c.field-meta.xml
<CustomField>
    <fullName>Date_dernier_controle__c</fullName>
    <label>Date du dernier contrôle</label>
    <type>Date</type>
</CustomField>