force-app/main/default/objects/Materiel_affecte__c/fields/Date_restitution__c.field-meta.xml
<CustomField>
    <fullName>Date_restitution__c</fullName>
    <label>Date de restitution</label>
    <type>Date</type>
</CustomField>