force-app/main/default/objects/Materiel_affecte__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <length>50</length>
    <type>Text</type>
</CustomField>