force-app/main/default/objects/Materiel_affecte__c/fields/Materiel__c.field-meta.xml
<CustomField>
    <fullName>Materiel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matériel</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>JCO_Mat_riels_affect_s_en_dev</relationshipName>
    <type>Lookup</type>
</CustomField>