force-app/main/default/objects/Materiel_affecte__c/fields/MEPI_Affecte_a__c.field-meta.xml
<CustomField>
    <fullName>MEPI_Affecte_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affecté à</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Matériels &amp; EPI affectés (Affecté à)</relationshipLabel>
    <relationshipName>Materiels_EPI_affectes1</relationshipName>
    <type>Lookup</type>
</CustomField>