force-app/main/default/objects/Materiel_affecte__c/fields/Motif_de_sortie__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_sortie__c</fullName>
    <label>Motif de sortie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebus</fullName>
            </value>
            <value>
                <fullName>Perte</fullName>
            </value>
            <value>
                <fullName>Vol</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>