force-app/main/default/objects/Materiel_affecte__c/fields/Numero_de_cde_dachat__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cde_dachat__c</fullName>
    <label>Numéro de cde d&apos;achat</label>
    <length>50</length>
    <type>Text</type>
</CustomField>