force-app/main/default/objects/Materiel_affecte__c/fields/Numero_de_serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_serie__c</fullName>
    <label>Numéro de série</label>
    <length>50</length>
    <type>Text</type>
</CustomField>