force-app/main/default/objects/Materiel_affecte__c/fields/Organisme_de_certification__c.field-meta.xml
<CustomField>
    <fullName>Organisme_de_certification__c</fullName>
    <label>Organisme de certification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>