force-app/main/default/objects/Materiel_affecte__c/fields/Pr_t_Externe__c.field-meta.xml
<CustomField>
    <fullName>Pr_t_Externe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prêt Externe</label>
    <type>Checkbox</type>
</CustomField>