force-app/main/default/objects/Materiel_affecte__c/fields/Prete_a__c.field-meta.xml
<CustomField>
    <fullName>Prete_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prêté à :</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Matériels &amp; EPI affectés (Attribué/prêté à :)</relationshipLabel>
    <relationshipName>Mat_riels_EPI_affect_s</relationshipName>
    <type>Lookup</type>
</CustomField>