force-app/main/default/objects/Materiel_affecte__c/fields/Prete_le__c.field-meta.xml
<CustomField>
    <fullName>Prete_le__c</fullName>
    <label>Prêté le :</label>
    <type>Date</type>
</CustomField>