force-app/main/default/objects/Materiel_affecte__c/fields/Reference_BW__c.field-meta.xml
<CustomField>
    <fullName>Reference_BW__c</fullName>
    <label>Référence BW</label>
    <length>20</length>
    <type>Text</type>
</CustomField>