force-app/main/default/objects/Materiel_affecte__c/fields/Rendu_le__c.field-meta.xml
<CustomField>
    <fullName>Rendu_le__c</fullName>
    <label>Rendu le :</label>
    <type>Date</type>
</CustomField>