force-app/main/default/objects/Materiel_affecte__c/fields/Type_de_materiel__c.field-meta.xml
<CustomField>
    <fullName>Type_de_materiel__c</fullName>
    <label>Type de matériel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appareil de mesures</fullName>
            </value>
            <value>
                <fullName>Électroportatif</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>EPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>